--- a/sass-js/index.html
+++ b/sass-js/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8" />
@@ -29,9 +29,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active .flex-column" aria-current="page" href="nosotros.html"><i class="iconLogo"></i>Sobre
+              <a class="nav-link" aria-current="page" href="nosotros.html"><i class="iconLogo"></i>Sobre
                 Nosotros</a>
-              <!-- cambiar active y aria en cada uno -->
             </li>
             <li class="nav-item">
               <a class="nav-link" href="trayectorias.html"><i class="iconLogo"></i>Trayectorias</a>
@@ -56,7 +55,6 @@
 
   <section class="hero">
     <div class="bgImgIndex">
-      <!-- cambiar class cada img -->
       <span class="container">
         <h1>UN FUTURO MEJOR ES POSIBLE</h1>
       </span>
@@ -85,7 +83,7 @@
 
     <article class="imgInfo">
       <div class="circleImg shadowY">
-        <img src="../assetts/img/fundacion/@sanantoniostudio.com.uy-155.jpg"
+        <img src="./assetts/img/trayectoria/@alvaroportillos-502.png"
           alt="Egresada del programa Trayectorias, trabajando en Tienda Inglesa" />
       </div>
 
@@ -99,19 +97,19 @@
         </p>
         <div class="iconsInfo">
           <div class="iconFlag">
-            <img src="../assetts/iconHand/icons-hand-with-pen-100.png" alt="" />
+            <img src="./assetts/iconHand/icons-hand-with-pen-100.png" alt="" />
             <p>721 han participado en el programa</p>
           </div>
           <div class="iconFlag">
-            <img src="../assetts/iconHand/icons-handshake-100.png" alt="" />
+            <img src="./assetts/iconHand/icons-handshake-100.png" alt="" />
             <p>80% ofertas laborales a egresados</p>
           </div>
           <div class="iconFlag">
-            <img src="../assetts/iconHand/icons-choose-100.png" alt="" />
+            <img src="./assetts/iconHand/icons-choose-100.png" alt="" />
             <p>5% dotación Tienda Inglesa actual</p>
           </div>
           <div class="iconFlag">
-            <img src="../assetts/iconHand/icons-trust-100.png" alt="" />
+            <img src="./assetts/iconHand/icons-trust-100.png" alt="" />
             <p>+100 participantes constantes</p>
           </div>
         </div>
@@ -121,7 +119,7 @@
 
     <article class="imgInfo reverse">
       <div class="circleImg shadowY">
-        <img src="../assetts/img/fundacion/@sanantoniostudio.com.uy-155.jpg"
+        <img src="./assetts/img/sinLimites/sinLimitesArocena.png"
           alt="Egresada del programa Trayectorias, trabajando en Tienda Inglesa" />
       </div>
       <div class="info">
@@ -132,15 +130,15 @@
         </p>
         <div class="iconsInfo">
           <div class="iconFlag">
-            <img src="../assetts/iconHand/icons-star-100.png" alt="" />
+            <img src="./assetts/iconHand/icons-star-100.png" alt="" />
             <p>21 personas incluidas</p>
           </div>
           <div class="iconFlag">
-            <img src="../assetts/iconHand/icons-laying-bricks-100.png" alt="" />
+            <img src="./assetts/iconHand/icons-laying-bricks-100.png" alt="" />
             <p>60% sucursales participantes</p>
           </div>
         </div>
-        <a href="./sinLimites.html" class="btn btn-outline-primary">Ir al programa Sin Límites</a>
+        <a href="./sin_limites.html" class="btn btn-outline-primary">Ir al programa Sin Límites</a>
       </div>
     </article>
   </section>
@@ -151,63 +149,55 @@
         <img class="destello" src="./assetts/destello.svg" alt="">
         <h2>Noticias</h2>
         <p class="text-body-emphasis">
-          <!-- CAMBIAR TEXTO -->
+          <!-- PEDIR TEXTO -->
           Lorem ipsum dolor sit amet consectetur. Interdum a vel id consequat. Mi eget massa pellentesque risus erat
           quam quam ac. Interdum a vel id consequat. Egestas sagittis mollis in tristique.
         </p>
       </div>
+      <!-- Hacer dinamico -->
       <div class="gridCards">
-        <div class="card">
-          <a href="..."><img src="../assetts/img/fundacion/@sanantoniostudio.com.uy-155.jpg" class="card-img-top"
-              alt="..."></a>
+        <a href="noticias.html" class="card" aria-label="link card">
+          <img src="./assetts/img/fundacion/@sanantoniostudio.com.uy-155.jpg" class="card-img-top" alt="">
           <div class="card-body">
             <span class="badge bg-primary">Fundación</span>
-            <a href="...">
-              <h5 class="card-title">Card title</h5>
-            </a>
+            <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
               content. This content is a little bit longer. This is a wider card with supporting text below as a natural
               lead-in to additional content. This content is a little bit longer.</p>
           </div>
           <div class="card-footer">
             <p>21 de setiembre, 2023</p>
-            <a href="...">Leer más...</a>
+            <h6>Leer más...</h6>
           </div>
-        </div>
-        <div class="card">
-          <a href="..."><img src="../assetts/img/fundacion/@sanantoniostudio.com.uy-155.jpg" class="card-img-top"
-              alt="..."></a>
+        </a>
+        <a href="noticias.html" class="card" aria-label="link card">
+          <img src="./assetts/img/fundacion/@sanantoniostudio.com.uy-155.jpg" class="card-img-top" alt="">
           <div class="card-body">
             <span class="badge bg-primary">Fundación</span>
-            <a href="...">
-              <h5 class="card-title">Card title</h5>
-            </a>
+            <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
               content. This content is a little bit longer. This is a wider card with supporting text below as a natural
               lead-in to additional content. This content is a little bit longer.</p>
           </div>
           <div class="card-footer">
             <p>21 de setiembre, 2023</p>
-            <a href="...">Leer más...</a>
+            <h6>Leer más...</h6>
           </div>
-        </div>
-        <div class="card">
-          <a href="..."><img src="../assetts/img/fundacion/@sanantoniostudio.com.uy-155.jpg" class="card-img-top"
-              alt="..."></a>
+        </a>
+        <a href="noticias.html" class="card" aria-label="link card">
+          <img src="./assetts/img/fundacion/@sanantoniostudio.com.uy-155.jpg" class="card-img-top" alt="">
           <div class="card-body">
             <span class="badge bg-primary">Fundación</span>
-            <a href="...">
-              <h5 class="card-title">Card title</h5>
-            </a>
+            <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
               content. This content is a little bit longer. This is a wider card with supporting text below as a natural
               lead-in to additional content. This content is a little bit longer.</p>
           </div>
           <div class="card-footer">
             <p>21 de setiembre, 2023</p>
-            <a href="...">Leer más...</a>
+            <h6>Leer más...</h6>
           </div>
-        </div>
+        </a>
       </div>
       <div class="btnGridFooter">
         <a href="./noticias.html" class="btn btn-outline-primary">Ver todas las noticias</a>
@@ -215,49 +205,40 @@
     </article>
   </section>
 
-  <section class="colaboradores">
+  <section class="bgFrame colaboradores">
     <article class="container shadowB">
       <h3>Organizaciones que nos acompañan</h3>
       <div id="carouselLogos" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Diapo 1"></button>
+          <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="1" aria-label="Diapo 2"></button>
+          <button type="button" data-bs-target="#carouselLogos" data-bs-slide-to="2" aria-label="Diapo 3"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="wrapper">
               <div class="item"><img alt="logo MIDES" src="./assetts/logos/logo_Mides.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Fundación Corazoncitos" src="./assetts/logos/logo_Corazoncitos.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Teletón" src="./assetts/logos/logo_Teleton.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Fundación Celeste" src="./assetts/logos/logo_FundacionCeleste.png" loading="lazy"></div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="wrapper">
+              <div class="item"><img alt="logo Nuestro Camino" src="./assetts/logos/logo_NuestroCamino.png" loading="lazy"></div>
+              <div class="item"><img alt="logo Uniendo" src="./assetts/logos/logo_Uniendo.png" loading="lazy"></div>      
               <div class="item"><img alt="logo Centro Don Bosco La Tablada" src="./assetts/logos/logo_CentroDonBoscoLaTablada.png" loading="lazy"></div> 
-              <div class="item"><img alt="logo Cimientos" src="./assetts/logos/logo_Cimientos.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Quebracho" src="./assetts/logos/logo_Quebracho.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Fe y Alegria" src="./assetts/logos/logo_FeAlegria.png" loading="lazy"></div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="wrapper">
+              <div class="item"><img alt="logo Cimientos" src="./assetts/logos/logo_Cimientos.png" loading="lazy"></div>
+              <div class="item"><img alt="logo Fe y Alegria" src="./assetts/logos/logo_FeAlegria.png" loading="lazy"></div>
               <div class="item"><img alt="logo Centro Educativo Santa Margarita" src="./assetts/logos/logo_CentroSantaMargarita.png" loading="lazy"></div>
               <div class="item"><img alt="logo Fundación Los Rosales" src="./assetts/logos/logo_FundacionLosRosales.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Aires Puros Centro Saleciano" src="./assetts/logos/logo_AiresPuros.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Treboles Centro Educativo" src="./assetts/logos/logo_Treboles.png" loading="lazy"></div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="wrapper">
-              <div class="item"><img alt="logo Abriendo Caminos" src="./assetts/logos/logo_AbriendoCaminos.png" loading="lazy"></div>
+              <div class="item"><img alt="logo Treboles Centro Educativo" src="./assetts/logos/logo_Treboles.png" loading="lazy"></div>
+              <div class="item"><img alt="logo Aires Puros Centro Saleciano" src="./assetts/logos/logo_AiresPuros.png" loading="lazy"></div>
+              <div class="item"><img alt="logo Quebracho" src="./assetts/logos/logo_Quebracho.png" loading="lazy"></div>
               <div class="item"><img alt="logo Madres De La Cruz" src="./assetts/logos/logo_MadresDeLaCruz.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Nuestro Camino" src="./assetts/logos/logo_NuestroCamino.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Unidos para Ayudar" src="./assetts/logos/logo_UnidosAyudar.png" loading="lazy"></div>
-              <div class="item"><img alt="logo Uniendo" src="./assetts/logos/logo_Uniendo.png" loading="lazy"></div>      
-          </div>
+              <div class="item"><img alt="logo logo Fundacion Tzedaká" src="./assetts/logos/logo_FundacionTzedaka.png" loading="lazy"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -267,13 +248,14 @@
 <section class="container">
   <img class="destello" src="./assetts/destello.svg" alt="">
   <article class="videoTestimonio">
-    <video id="videoMides" class="shadowP" aria-label="Testimonio de Cecilia Sena, Directora Nacional de Desarrollo Social, MIDES">
+    <video class="video shadowP" aria-label="Testimonio de Cecilia Sena, Directora Nacional de Desarrollo Social, MIDES">
       <source src="./assetts/testimonios/MidesTestimonio.mp4" type="video/mp4">
       <source src="./assetts/testimonios/MidesLoading.png" type="image/png">
+      Lo sentimos, su navegador no puede reproducir el video.
     </video>
     <div>
-      <button type="button" id="videoHandler" data-state="play" title="reproduce y pausa" aria-label="reproduce y Pausa, video Testimonio Cecilia Sena,MIDES">
-        <i class="bi bi-play-circle"></i>
+      <button type="button" class="videoHandler" data-state="play" title="Reproducir" aria-label="reproduce y pausa video testimonio">
+        <i class="iconVideoPlay bi bi-play-circle"></i>
       </button>
       <h3>Cecilia Sena</h3>
       <h4>Directora Nacional de Desarrollo Social</h4>
@@ -302,6 +284,7 @@
       <img src="./assetts/logoFundacionF.svg" alt="Fundación Tienda Inglesa" />
       <p class="fw-light">© 2023 Fundación Tienda Inglesa.</p>
       <div>
+        <!-- ACTUALIZAR LINKS SOCIALES -->
         <a href="https://youtube.com/@canaltiendainglesa" target="_blank" aria-label="Ir a nuestro YouTube"><i class="bi bi-youtube"></i></a>
         <a href="http://twitter.com/TiendaInglesa" target="_blank" aria-label="Ir a nuestro Twitter - X"><i class="bi bi-twitter-x"></i></a>
         <a href="https://instagram.com/tiendainglesa" target="_blank" aria-label="Ir a nuestro Instagram"><i class="bi bi-instagram"></i></a>
