--- a/sass-js/nosotros.html
+++ b/sass-js/nosotros.html
@@ -1,11 +1,196 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Solway:wght@400;500;700;800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+
+  <title>Fundación Tienda Inglesa</title>
 </head>
+
 <body>
+  <header>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="./assetts/logoFundacion.png" alt="ir al home de Fundación Tienda Inglesa" />
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="nosotros.html"><i class="iconLogo"></i>Sobre
+                Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="trayectorias.html"><i class="iconLogo"></i>Trayectorias</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sin_limites.html"><i class="iconLogo"></i>Sin Límites</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="social.html"><i class="iconLogo"></i>Compromiso Social</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="noticias.html"><i class="iconLogo"></i>Noticias</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html"><i class="iconLogo"></i>Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <div class="bgImgNosotros">
+      <span class="container">
+        <h1>SOBRE NOSOTROS</h1>
+      </span>
+    </div>
+    <article class="container">
+      <h4 class="shadowY">
+        Nuestra Fundación nace en 2018, para plasmar la misión de Tienda Inglesa de generar un impacto positivo en las comunidades donde actúa.
+      </h4>
+      <img src="./assetts/flecha.svg" alt="" />
+    </article>
+  </section>
+
+  <section class="container">
+    <article class="heading">
+      <h2>Un futuro mejor es posible</h2>
+      <p class="text-body-emphasis">
+        Desde la fundación creemos que abrir puertas es fundamental para que las personas sean capaces de salir adelante gracias a su esfuerzo.
+      </p>
+    </article>
+</section>
     
+    <div class="container">
+        <img class="imgFrame shadowY" src="./assetts/img/trayectoria/IMG-20230729-WA0009.png" alt="Clase del programa Trayectorias, saludando alegres a la cámara" />
+    </div>
+
+<section class="container">
+    <article class="objetivos">
+        <div>
+            <img src="../assetts/iconHand/icons-empty-flag-100.png" alt="" />
+            <h3>Propósito</h3>
+            <p class="text-body-emphasis">Que personas con menos oportunidades puedan construir una vida más estable y plena.</p>
+        </div>
+        <div>
+            <img src="../assetts/iconHand/icons-goal-100.png" alt="" />
+            <h3>Misión</h3>
+            <p class="text-body-emphasis">A través de nuestros programas instalamos capacidades para contribuir activamente y de manera sostenida al desarrollo de nuestra comunidad.</p>
+        </div>
+        <div>
+            <img src="../assetts/iconHand/icons-gold-medal-100.png" alt="" />
+            <h3>Visión</h3>
+            <p class="text-body-emphasis"> múltiples propuestas de impacto, calidad e innovadoras, ofreciendo a las personas mejores posibilidades para cumplir sus sueños.</p>
+        </div>
+    </article>
+</section>
+    
+
+  <section class="bgFrame valores">
+    <article class="container shadowB">
+      <h3>Valores</h3>
+      <p class="text-body-emphasis">Cada año, desde la Fundación ingresan nuevos colabordores/as en nuestras tiendas, nuestros valores pretender ser una guia para que cada decisión nos convierta en mejores equipos.</p>    
+      <div class="gridValores">
+        <div>
+          <img src="../assetts/iconHand/icons-environment-care-100.png" alt="" />
+          <h5>Respeto</h5>
+          <p>Valoramos y aprendemos lo que nos hace diferentes.</p>
+        </div>
+        <div>
+          <img src="../assetts/iconHand/icons-clean-hands-100.png" alt="" />
+          <h5>Transparencia</h5>
+          <p>Aseguramos el mismo nivel de oportunidades. Siendo coherentes y claros con nuestro propósito.</p>
+        </div>
+        <div>
+          <img src="../assetts/iconHand/icons-tree-planting-100.png" alt="" />
+          <h5>Sostenibilidad</h5>
+          <p>Desarrollamos habilidades y procesos necesarios para que la inserción laboral se mantenga a largo plazo.</p>
+        </div>
+        <div>
+          <img src="../assetts/iconHand/icons-handshake-100.png" alt="" />
+          <h5>Compromiso</h5>
+          <p>Oferecemos las mejores herramientas para alcanzar el éxito.</p>
+        </div>
+        <div>
+          <img src="../assetts/iconHand/icons-shield-100.png" alt="" />
+          <h5>Responsibilidad</h5>
+          <p>Creamos las condiciones para que cada persona pueda desarrollar su máximo potencial.</p>
+        </div>
+      </div>
+    </article>
+</section>
+
+<section class="container">
+  <article class="heading">
+    <h2>Así lo hacemos</h2>
+    <p class="text-body-emphasis">
+      <!-- PEDIR TEXTO -->
+      Lorem ipsum dolor sit amet consectetur. Mattis eget ac ornare gravida gravida sit egestas nunc est. Gravida mi duis in vulputate pharetra eget adipiscing hendrerit. Lorem ipsum dolor sit amet consectetur. Mattis eget ac ornare gravida gravida sit egestas nunc est. Gravida mi duis in vulputate pharetra eget adipiscing hendrerit.
+    </p>
+    <div class="gridIndicadores">
+      <div>
+        <img src="../assetts/iconHand/icons-hand-with-pen-100.png" alt="" />
+        <h3>721</h3>
+        <p>personas participaron en el programa Trayectorias</p>
+      </div>
+      <div>
+        <img src="../assetts/iconHand/icons-handshake-100.png" alt="" />
+        <h3>80%</h3>
+        <p>de quienes finalizaron la etapa de Formación Específica, recibieron una oferta laboral desde Tienda</p>
+      </div>
+      <div>
+        <img src="../assetts/iconHand/icons-choose-100.png" alt="" />
+        <h3>5%</h3>
+        <p>de la actual dotación de Tienda Inglesa proviene del Programa</p>
+      </div>
+      <div>
+        <img src="../assetts/iconHand/icons-trust-100.png" alt="" />
+        <h3>+100</h3>
+        <p>voluntarios de Tienda participan del programa consistentemente</p>
+      </div>
+      <div>
+        <img src="../assetts/iconHand/icons-star-100.png" alt="" />
+        <h3>21</h3>
+        <p>personas incluidas a través del programa Sin Límites</p>
+      </div>
+      <div>
+        <img src="../assetts/iconHand/icons-laying-bricks-100.png" alt="" />
+        <h3>60%</h3>
+        <p>de las sucursales participan del programa</p>
+      </div>
+    </div>
+  </article>
+</section>
+
+  <footer>
+    <div class="container">
+      <img src="./assetts/logoFundacionF.svg" alt="Fundación Tienda Inglesa" />
+      <p class="fw-light">© 2023 Fundación Tienda Inglesa.</p>
+      <div>
+        <a href="https://youtube.com/@canaltiendainglesa" target="_blank" aria-label="Ir a nuestro YouTube"><i class="bi bi-youtube"></i></a>
+        <a href="http://twitter.com/TiendaInglesa" target="_blank" aria-label="Ir a nuestro Twitter - X"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://instagram.com/tiendainglesa" target="_blank" aria-label="Ir a nuestro Instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.threads.net/@tiendainglesa" target="_blank" aria-label="Ir a nuestro Threads"><i class="bi bi-threads-fill"></i></a>
+        <a href="http://www.facebook.com/tiendainglesa" target="_blank" aria-label="Ir a nuestro Facebook"><i class="bi bi-facebook"></i></a>
+      </div>
+    </div>
+  </footer>
+  <script type="module" src="./js/main.js"></script>
 </body>
+
 </html>
