--- a/sass-js/index.html
+++ b/sass-js/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg shadowB">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <img src="./assetts/logoFundacion.png" alt="ir al home de Fundación Tienda Inglesa" />
@@ -83,7 +83,7 @@
 
     <article class="imgInfo">
       <div class="circleImg shadowY">
-        <img src="./assetts/img/trayectoria/@alvaroportillos-502.png"
+        <img src="./assetts/img/trayectorias/@alvaroportillos-502.png"
           alt="Egresada del programa Trayectorias, trabajando en Tienda Inglesa" />
       </div>
 
