--- a/sass-js/trayectorias.html
+++ b/sass-js/trayectorias.html
@@ -20,7 +20,7 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg shadowB">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
             <img
@@ -98,7 +98,7 @@
       <article class="imgInfo">
         <div class="circleImg shadowY">
           <img
-            src="./assetts/img/trayectoria/20230921_104757.png"
+            src="./assetts/img/trayectorias/20230921_104757.png"
             alt="Egresada del programa Trayectorias, trabajando en Tienda Inglesa"
           />
         </div>
