--- a/sass-js/social.html
+++ b/sass-js/social.html
@@ -1,11 +1,305 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html lang="es">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Solway:wght@400;500;700;800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
+
+    <title>Fundación Tienda Inglesa</title>
+  </head>
+
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg shadowB">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img
+              src="./assetts/logoFundacion.png"
+              alt="ir al home de Fundación Tienda Inglesa"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="nosotros.html"
+                  ><i class="iconLogo"></i>Sobre Nosotros</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="trayectorias.html"
+                  ><i class="iconLogo"></i>Trayectorias</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="sin_limites.html"
+                  ><i class="iconLogo"></i>Sin Límites</a
+                >
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="social.html"
+                  ><i class="iconLogo"></i>Compromiso Social</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="noticias.html"
+                  ><i class="iconLogo"></i>Noticias</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto.html"
+                  ><i class="iconLogo"></i>Contacto</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <section class="hero">
+      <div class="bgImgSocial">
+        <span class="container">
+          <h1>COMPROMISO SOCIAL</h1>
+        </span>
+      </div>
+      <article class="container">
+        <h4 class="shadowY">En Tienda Inglesa estamos atentos a...</h4>
+        <img src="./assetts/flecha.svg" alt="" />
+      </article>
+    </section>
+
+    <section class="container">
+      <article class="imgInfo">
+        <div class="circleImg shadowY">
+          <img
+            src="./assetts/img/fundacion/jardinInfantes.png"
+            alt="Niños y adultos interactuan en una jornada en el Jardín de Infantes Creciendo Juntos"
+          />
+        </div>
+
+        <div class="info">
+          <h2>VOLUNTARIADO</h2>
+          <p class="text-body-emphasis">
+            Coordinamos actividades con diversas instituciones e iniciativas.
+            Todo el trabajo de los programas es posible gracias al compromiso de
+            más de 100 colaboradores de Tienda que, voluntariamente, se suman a
+            estas iniciativas para llevarlas adelante.
+          </p>
+        </div>
+      </article>
+
+      <img class="flechas mirror" src="./assetts/flecha.svg" alt="" />
+    </section>
+
+    <section class="container">
+      <article class="videoFrame">
+        <video
+          class="shadowY"
+          controls
+          autoplay
+          muted
+          loop
+          controlslist="nodownload"
+          aria-label="Video Institucional con testimonios e imagenes de diferentes jornadas de voluntariado y preparación de donaciones"
+        >
+          <source
+            src="./assetts/videos/videoSinLimites_2022.mp4"
+            type="video/mp4"
+          />
+          Lo sentimos, su navegador no puede reproducir el video.
+        </video>
+      </article>
+    </section>
+
+    <section class="bgFrame colaboradores">
+      <article class="container shadowB">
+        <h3>Organizaciones que apoyan</h3>
+
+        <div id="carouselLogos" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselLogos"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Diapo 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselLogos"
+              data-bs-slide-to="1"
+              aria-label="Diapo 2"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="wrapper">
+                <div class="item">
+                  <img
+                    alt="logo Teletón"
+                    src="./assetts/logos/logo_Teleton.png"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="item">
+                  <img
+                    alt="logo Fundación Corazoncitos"
+                    src="./assetts/logos/logo_Corazoncitos.png"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="item">
+                  <img
+                    alt="logo Fundación Celeste"
+                    src="./assetts/logos/logo_FundacionCeleste.png"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="item">
+                  <img
+                    alt="logo Festival Sin Limites"
+                    src="./assetts/logos/logo_FestivalSinLimites.png"
+                    loading="lazy"
+                  />
+                </div>
+              </div>
+            </div>
+
+            <div class="carousel-item">
+              <div class="wrapper">
+                <div class="item">
+                  <img
+                    alt="logo Abriendo Caminos"
+                    src="./assetts/logos/logo_AbriendoCaminos.png"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="item">
+                  <img
+                    alt="logo Unidos para Ayudar"
+                    src="./assetts/logos/logo_UnidosAyudar.png"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="item">
+                  <img
+                    alt="logo Incluir para Crecer"
+                    src="./assetts/logos/logo_IncluirCrecer.png"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="item">
+                  <img
+                    alt="logo Centro Educativos Creciendo Juntos"
+                    src="./assetts/logos/logo_CreciendoJuntos.png"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="item">
+                  <img
+                    alt="logo Canastas.uy"
+                    src="./assetts/logos/logo_CanastasUy.png"
+                    loading="lazy"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+    </section>
+
+    <section class="container">
+      <article class="imgInfo reverse">
+        <div class="circleImg shadowY">
+          <img
+            src="./assetts/img/fundacion/@sanantoniostudio.com_.uy-13.png"
+            alt="Grupo de voluntarios de Tienda Inglesa realizando donaciones"
+          />
+        </div>
+
+        <div class="info">
+          <h2>DONACIONES</h2>
+          <p class="text-body-emphasis">
+            Lorem ipsum dolor sit amet consectetur. Pulvinar magna nunc dolor
+            posuere. In dignissim...
+          </p>
+          <div class="iconsInfo">
+            <div class="iconFlag">
+              <img
+                src="./assetts/iconHand/icons-sell-100.png"
+                alt=""
+              />
+              <p>60% sucursales participantes</p>
+            </div>
+          </div>
+        </div>
+      </article>
+    </section>
+
+    <footer>
+      <div class="container">
+        <img
+          src="./assetts/logoFundacionF.svg"
+          alt="Fundación Tienda Inglesa"
+        />
+        <p class="fw-light">© 2023 Fundación Tienda Inglesa.</p>
+        <div>
+          <a
+            href="https://youtube.com/@canaltiendainglesa"
+            target="_blank"
+            aria-label="Ir a nuestro YouTube"
+            ><i class="bi bi-youtube"></i
+          ></a>
+          <a
+            href="http://twitter.com/TiendaInglesa"
+            target="_blank"
+            aria-label="Ir a nuestro Twitter - X"
+            ><i class="bi bi-twitter-x"></i
+          ></a>
+          <a
+            href="https://instagram.com/tiendainglesa"
+            target="_blank"
+            aria-label="Ir a nuestro Instagram"
+            ><i class="bi bi-instagram"></i
+          ></a>
+          <a
+            href="https://www.threads.net/@tiendainglesa"
+            target="_blank"
+            aria-label="Ir a nuestro Threads"
+            ><i class="bi bi-threads-fill"></i
+          ></a>
+          <a
+            href="http://www.facebook.com/tiendainglesa"
+            target="_blank"
+            aria-label="Ir a nuestro Facebook"
+            ><i class="bi bi-facebook"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
+    <script type="module" src="./js/main.js"></script>
+  </body>
 </html>
