--- a/sass-js/nosotros.html
+++ b/sass-js/nosotros.html
@@ -77,7 +77,7 @@
 </section>
     
     <div class="container">
-        <img class="imgFrame shadowY" src="./assetts/img/trayectorias/IMG-20230729-WA0009.png" alt="Clase del programa Trayectorias, saludando alegres a la cámara" />
+        <img class="imgFrame shadowY" src="./assetts/img/trayectorias/IMG-20230729-WA0009.webp" alt="Clase del programa Trayectorias, saludando alegres a la cámara" />
     </div>
 
 <section class="container">
@@ -95,7 +95,7 @@
         <div>
             <img src="../assetts/iconHand/icons-gold-medal-100.png" alt="" />
             <h3>Visión</h3>
-            <p class="text-body-emphasis"> múltiples propuestas de impacto, calidad e innovadoras, ofreciendo a las personas mejores posibilidades para cumplir sus sueños.</p>
+            <p class="text-body-emphasis"> Liderar múltiples propuestas de impacto, calidad e innovadoras, ofreciendo a las personas mejores posibilidades para cumplir sus sueños.</p>
         </div>
     </article>
 </section>
