--- a/sass-js/sin_limites.html
+++ b/sass-js/sin_limites.html
@@ -19,8 +19,8 @@
   </head>
 
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg shadowB">
+    <header class="shadowB">
+      <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
             <img
@@ -54,8 +54,8 @@
                   ><i class="iconLogo"></i>Trayectorias</a
                 >
               </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="sin_limites.html"
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="sin_limites.html"
                   ><i class="iconLogo"></i>Sin Límites</a
                 >
               </li>
@@ -98,7 +98,7 @@
       <article class="imgInfo reverse">
         <div class="circleImg shadowY">
           <img
-            src="./assetts/img/sinLimites/@alvaroportillos-7.png"
+            src="./assetts/img/sinLimites/@alvaroportillos-7.webp"
             alt="Egresada del programa Sin Límites, trabajando en Tienda Inglesa"
           />
         </div>
@@ -160,7 +160,7 @@
       <img class="destello" src="./assetts/destello.svg" alt="" />
       <article class="testimonios">
         <div class="shadowP">
-          <img src="./assetts/testimonios/sinLimites1.png" alt="avatar Guillermo">
+          <img src="./assetts/testimonios/sinLimites1.webp" alt="avatar Guillermo">
           <div class="estrellas">
             <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
           </div>
@@ -178,11 +178,11 @@
             <q>
               Desde Uniendo agradecemos a la Fundación Tienda Inglesa por su dedicación y compromiso con la inclusión laboral de personas con discapacidad. Esta dedicación y compromiso se ve en cada una de las personas involucradas en las diferentes sucursales, donde siempre están dispuestos a dar lo mejor para que cada inclusión sea un éxito, generando un ambiente laboral de una gran calidez humana. ¡Gracias por confiar en nuestro equipo para acompañarlos durante todo el proceso!
             </q>
-            <h4>Fernando Etcheveste</h4>
-            <h5>Deposito</h5>
+            <h4>Un nombre ???</h4><!-- pedir nombre -->
+            <h5>Uniendo</h5>
         </div>
         <div class="shadowP">
-          <img src="./assetts/testimonios/sinLimites2.png" alt="avatar Facundo">
+          <img src="./assetts/testimonios/sinLimites2.webp" alt="avatar Facundo">
           <div class="estrellas">
             <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
           </div>
