--- a/sass-js/social.html
+++ b/sass-js/social.html
@@ -19,8 +19,8 @@
   </head>
 
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg shadowB">
+    <header class="shadowB">
+      <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
             <img
@@ -56,8 +56,8 @@
                   ><i class="iconLogo"></i>Sin Límites</a
                 >
               </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="social.html"
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="social.html"
                   ><i class="iconLogo"></i>Compromiso Social</a
                 >
               </li>
@@ -93,7 +93,7 @@
       <article class="imgInfo">
         <div class="circleImg shadowY">
           <img
-            src="./assetts/img/fundacion/jardinInfantes.png"
+            src="./assetts/img/fundacion/jardinInfantes.webp"
             alt="Niños y adultos interactuan en una jornada en el Jardín de Infantes Creciendo Juntos"
           />
         </div>
@@ -235,7 +235,7 @@
       <article class="imgInfo reverse">
         <div class="circleImg shadowY">
           <img
-            src="./assetts/img/fundacion/@sanantoniostudio.com_.uy-13.png"
+            src="./assetts/img/fundacion/@sanantoniostudio.com_.uy-13.webp"
             alt="Grupo de voluntarios de Tienda Inglesa realizando donaciones"
           />
         </div>
